<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数字医生</string>
    <string name="search_hint">好友、圈子、知识点、病例、帖子</string>
    <string name="tab_index">首页</string>
    <string name="tab_iv_index">首页图片</string>
    <string name="tab_explore">发现</string>
    <string name="tab_iv_explore">发现图片</string>
    <string name="tab_library">知识</string>
    <string name="tab_iv_library">知识库图片</string>
    <string name="tab_self">我</string>
    <string name="tab_iv_self">我图片</string>
    <string name="tab_action_bg">功能背景图</string>
    <string name="tab_action">功能图片</string>
    <string name="authentication_upload">上传证件</string>
    <string name="authentication_uploading">已上传</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_introduce">IntroduceActivity</string>
    <string name="title_activity_picture_gallery">PictureGalleryActivity</string>
    <string name="title_activity_circle">CircleActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_circle">CreateCircleActivity</string>
    <string name="title_activity_normal_post">NormalPostActivity</string>
    <string name="title_activity_problem_help">ProblemHelpActivity</string>
    <string name="title_activity_mine_send_like">MineSendLikeActivity</string>
    <string name="title_activity_library_paper">LibraryPaperActivity</string>
    <string name="title_activity_more_news">MoreNewsActivity</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="title_activity_news_comment">NewsCommentActivity</string>
    <string name="title_activity_crop_image">CropImageActivity</string>
    <string name="title_activity_more_news_comments">MoreNewsCommentsActivity</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="title_activity_my_circle">MyCircleActivity</string>
    <string name="title_activity_more_fragment">MoreFragment</string>
    <string name="title_activity_self">SelfActivity</string>
    <string name="title_activity_chat_settings">ChatSettingsActivity</string>
    <string name="title_activity_address_book">AddressBookActivity</string>
    <string name="title_activity_message_setting">MessageSettingActivity</string>
    <string name="title_activity_background_setting">BackgroundSettingActivity</string>
    <string name="title_activity_circle_info_setting">CircleInfoSettingActivity</string>

</resources>
