<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/base_bg" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/global_main" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:src="@drawable/icon_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_5dp"
                android:layout_toRightOf="@id/iv_logo"
                android:text="@string/self_title"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_Lmiddle_18sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_search"
            style="@style/SendButton"
            android:layout_width="60dip"
            android:layout_height="44dip"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            android:src="@drawable/i_search" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fl_menu"
        android:layout_below="@id/header"
        android:background="@color/base_bg" >
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height_2"
        android:layout_above="@id/fl_menu"
        android:background="@drawable/shadow_color2" />

    <FrameLayout
        android:id="@+id/fl_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <!-- 首页 -->

            <FrameLayout
                android:id="@+id/fl_index"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/tab_height"
                android:layout_weight="1"
                android:background="@color/white"
                android:paddingBottom="@dimen/tab_padding_bottom"
                android:paddingTop="@dimen/tab_padding_top" >

                <ImageView
                    android:id="@+id/iv_index"
                    android:layout_width="@dimen/tab_iv_size"
                    android:layout_height="@dimen/tab_iv_size"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/tab_iv_index"
                    android:src="@drawable/tab_index_select" />

                <TextView
                    android:id="@+id/tv_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="@dimen/tab_txt_margin_top"
                    android:text="@string/tab_index"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tab_size" />
            </FrameLayout>
            <!-- 发现 -->

            <FrameLayout
                android:id="@+id/fl_explore"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/tab_height"
                android:layout_weight="1"
                android:background="@drawable/button_pop_selector"
                android:paddingBottom="@dimen/tab_padding_bottom"
                android:paddingTop="@dimen/tab_padding_top" >

                <ImageView
                    android:id="@+id/iv_explore"
                    android:layout_width="@dimen/tab_iv_size"
                    android:layout_height="@dimen/tab_iv_size"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/tab_iv_explore"
                    android:src="@drawable/tab_explore_select" />

                <TextView
                    android:id="@+id/tv_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="@dimen/tab_txt_margin_top"
                    android:text="@string/tab_explore"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tab_size" />
            </FrameLayout>

            <!-- 留白 -->

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </FrameLayout>

            <!-- 知识库 -->

            <FrameLayout
                android:id="@+id/fl_library"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/tab_height"
                android:layout_weight="1"
                android:background="@drawable/button_pop_selector"
                android:paddingBottom="@dimen/tab_padding_bottom"
                android:paddingTop="@dimen/tab_padding_top" >

                <ImageView
                    android:id="@+id/iv_library"
                    android:layout_width="@dimen/tab_iv_size"
                    android:layout_height="@dimen/tab_iv_size"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/tab_iv_library"
                    android:src="@drawable/tab_library_select" />

                <TextView
                    android:id="@+id/tv_library"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="@dimen/tab_txt_margin_top"
                    android:text="@string/tab_library"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tab_size" />
            </FrameLayout>

            <!-- 我 -->

            <FrameLayout
                android:id="@+id/fl_self"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/tab_height"
                android:layout_weight="1"
                android:background="@drawable/button_pop_selector"
                android:paddingBottom="@dimen/tab_padding_bottom"
                android:paddingTop="@dimen/tab_padding_top" >

                <ImageView
                    android:id="@+id/iv_self"
                    android:layout_width="@dimen/tab_iv_size"
                    android:layout_height="@dimen/tab_iv_size"
                    android:layout_gravity="top|center"
                    android:contentDescription="@string/tab_iv_self"
                    android:src="@drawable/tab_self_select" />

                <TextView
                    android:id="@+id/tv_self"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginTop="@dimen/tab_txt_margin_top"
                    android:text="@string/tab_self"
                    android:textColor="@color/black"
                    android:textSize="@dimen/tab_size" />
                 <ImageView 
                    android:id="@+id/iv_remind_self"
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:src="@drawable/remind"
                    android:layout_marginLeft="42dp"
                    android:visibility="gone"
                    />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <!-- 中间按钮背景 -->

    <ImageView
        android:id="@+id/iv_action_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/fl_menu"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/view_doctorinfo_margin_2"
        android:layout_marginTop="@dimen/view_doctorinfo_margin_2"
        android:contentDescription="@string/tab_action_bg"
        android:src="@drawable/tab_action" />

    <!-- 中间按钮 -->

    <ImageView
        android:id="@+id/iv_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/fl_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/view_doctorinfo_margin_2"
        android:layout_marginTop="@dimen/view_doctorinfo_margin_2"
        android:contentDescription="@string/tab_action"
        android:src="@drawable/tab_action_select" />

</RelativeLayout>